--- a/scss/main.scss
+++ b/scss/main.scss
@@ -166,6 +166,7 @@ body {
 
         transition: transform .5s ease-in-out,
                     box-shadow .5s ease-in-out;
+
         &--active {
             transform: translateX(70vw);
             box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
@@ -176,6 +177,7 @@ body {
         @include listStyleReset();
         padding: 25px;
         margin: 10px;
+        overflow: hidden; // for before transition
     
         &:first-child {
             margin-top: 25px;
@@ -186,6 +188,31 @@ body {
         color: $mainWhite;
         font-size: 25px;
         text-transform: uppercase;
+        position: relative;
+
+        transition: font-weight .3s ease-in-out;
+
+        &::before {
+            content: " ";
+            position: absolute;
+            top: 0;
+            left: -200%;  //because overflow:hidden is __item
+            width: 100%;
+            height: 100%;
+            border-bottom: 2px solid $mainWhite;
+
+            transition: transform .4s ease-in-out;
+        }
+
+        &:hover {
+            font-weight: 800;
+            
+            &::before {
+                transform: translateX(200%);
+            }
+        }
+
+
 
     }
 }
