--- a/scss/600px.scss
+++ b/scss/600px.scss
@@ -16,6 +16,7 @@
             transition: none;
             margin: 10px 30px;
             border: 0;
+            display: flex;
 
             &--active {
                 box-shadow: none; 
