--- a/scss/main.scss
+++ b/scss/main.scss
@@ -190,7 +190,7 @@ body {
         text-transform: uppercase;
         position: relative;
 
-        transition: font-weight .3s linear;
+        transition: font-weight .3s ease-in-out;
 
         &::before {
             content: " ";
