footer and transition correction

--- a/scss/890px.scss
+++ b/scss/890px.scss
@@ -100,9 +100,12 @@
             grid-area: 2 / 1 / 3 / 3;
         }
     }
-        //offer is a pricing element
-    .offer {
-        grid-template-columns: repeat(auto-fit, minmax(240px, 370px));
+    
+    .pricing {
+        .offer {
+            grid-template-columns: repeat(auto-fit, minmax(240px, 370px));
+        }
     }
+
 
 }
