--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ $fontFamily: 'Karla', sans-serif;
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700;800&display=swap');
 
+
 //minxins
 @mixin subTitle($color) {
     text-transform: uppercase;
@@ -97,7 +98,7 @@ $fontFamily: 'Karla', sans-serif;
     }
 }
 
-// typography setting 
+//typography setting & global setting
 h1 {
     font-size: 35px;
     font-weight: 800;
@@ -113,7 +114,7 @@ button, input {
     font-family: $fontFamily;
 }
 
-//global setting
+
 *, *::before, *::after {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -129,11 +130,10 @@ body {
     background-color: $mainWhite;
 }
 
-
+//website
 .container {
     margin: 0 auto;
 }
-
 
 .navigation {
     display: flex;
@@ -152,7 +152,7 @@ body {
         margin: 10px 20px;
     }
 
-    //navigation panel
+    //navigation panel (mobile)
     &__list {
         @include listStyleReset();
         position: absolute;
@@ -196,7 +196,7 @@ body {
             content: " ";
             position: absolute;
             top: 0;
-            left: -200%;  //because overflow:hidden is __item
+            left: -200%;  //because overflow: hidden is &__item
             width: 100%;
             height: 100%;
             border-bottom: 2px solid $mainWhite;
@@ -205,19 +205,18 @@ body {
         }
 
         &:hover {
+            margin: 0;
+            padding: 0;
             font-weight: 800;
             
             &::before {
                 transform: translateX(200%);
             }
         }
-
-
-
     }
 }
 
-    // is a navigation element (button navigation mobile)
+    //button navigation mobile
     .navbutton {
         margin: 0 20px;
         border: 0;
@@ -233,7 +232,7 @@ body {
             height: 38px;
         }
 
-        //lines
+        //lines in button
         &__fill {
             position: absolute;
             width: 70%;
@@ -265,7 +264,7 @@ body {
             &::after {
                 @include lines(-8px);
             }
-        }   //end make line
+        } //end lines in button
         
         //active button 
         &--active .navbutton__fill {
@@ -273,21 +272,20 @@ body {
             transition: background-color .2s ease-in-out;
         }
 
-        &--active .navbutton__fill::before{
+        &--active .navbutton__fill::before {
             background-color: $greyColor;
             
             transform: translateY(-8px) rotate(45deg);
-            transition: transform .3s ease-in;
+            transition: transform .3s ease-in-out;
         }
 
         &--active .navbutton__fill::after {
             background-color: $greyColor;
 
             transform: translateY(8px) rotate(-45deg);
-            transition: transform .3s ease-in;
+            transition: transform .3s ease-in-out;
         }
-    }
-//end of navigation
+    } //end of navigation
 
 .start {
     min-height: 105vh;
@@ -416,10 +414,7 @@ body {
             text-align: justify;
         }
     }
-
-}
-
-//end of simple
+} //end of simple
 
 .code {
     display: flex;
@@ -527,103 +522,102 @@ body {
         @include title();
         color: $orangeColor;
     }
-}
-    //is a pricing element
-.offer {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 298px));
-    grid-gap: 2%;
-    justify-content: center;
-    justify-self: center;
 
-    &__box {
-        display: flex;
-        flex-flow: column wrap;
-        align-content: center;
-        background-color: $classicWhite;
-        border-radius: 3px;
-        margin: 0 auto;
-        padding: 30px;
-        color: $blackColor;
-    }
+    .offer {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 298px));
+        grid-gap: 2%;
+        justify-content: center;
+        justify-self: center;
 
-
-    &__header {
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 13px;
-        color: $greyColor;
-
-        p {
-            margin:0;
-            padding:0;
+        &__box {
+            display: flex;
+            flex-flow: column wrap;
+            align-content: center;
+            background-color: $classicWhite;
+            border-radius: 3px;
+            margin: 0 auto;
+            padding: 30px;
+            color: $blackColor;
         }
-    }
 
-    &__price {
-        align-self: center;
-        position: relative;
-
-        span {
-            font-size: 20px;
+        &__header {
+            text-transform: uppercase;
             font-weight: 700;
+            font-size: 13px;
+            color: $greyColor;
 
-            //style for dolar
-            &:first-child {
-                position: absolute;
-                top: 0;
-                left: -15%;   
-            }
-
-            //style for text "/month"
-            &:last-child {
-                font-weight: 600;
+            p {
+                margin:0;
+                padding:0;
             }
         }
-    }
 
-    &__description {
-        text-align: justify;
-        line-height: 150%;
-        font-size: 13px;
-        color: $greyColor;
-    }
+        &__price {
+            align-self: center;
+            position: relative;
 
-    &__list {
-        @include listStyleReset();
-        line-height: 250%;
-        font-size: 17px;
-        margin: 20px 0;
-    }
+            span {
+                font-size: 20px;
+                font-weight: 700;
 
-    &__item {
-        @include listStyleReset();
-    }
+                //style for dolar ($)
+                &:first-child {
+                    position: absolute;
+                    top: 0;
+                    left: -15%;   
+                }
 
-    &__button {
-         @include button($blueColor);
-    }
-
-    //active box 
-    &__box--active {
-        background-color: #2b405a;
-        color: $classicWhite;
-
-        .offer {
-            &__header, 
-            &__description,
-            &__price {
-               color: $classicWhite;
-            }
-    
-            &__button {
-                align-self: left;
-                @include button($orangeColor);
+                //style for text "/month"
+                &:last-child {
+                    font-weight: 600;
+                }
             }
         }
-    }
-}  //end of pricing
+
+        &__description {
+            text-align: justify;
+            line-height: 150%;
+            font-size: 13px;
+            color: $greyColor;
+        }
+
+        &__list {
+            @include listStyleReset();
+            line-height: 250%;
+            font-size: 17px;
+            margin: 20px 0;
+        }
+
+        &__item {
+            @include listStyleReset();
+        }
+
+        &__button {
+            @include button($blueColor);
+        }
+
+        //active box 
+        &__box--active {
+            background-color: #2b405a;
+            color: $classicWhite;
+
+            .offer {
+                &__header, 
+                &__description,
+                &__price {
+                    color: $classicWhite;
+                }
+                &__button {
+                    @include button($orangeColor);
+                    
+                    align-self: left;
+                }
+            }
+        }
+    }  
+} //end of pricing
 
 .footer {
     display: grid;
@@ -678,7 +672,7 @@ body {
         &__item {
             @include listStyleReset();
             letter-spacing: 1px;
-            text-align: left;
+            overflow: hidden;
     
             &:hover {
                 color: $greyColor;
@@ -686,27 +680,44 @@ body {
         }
     
         &__link {
+            position: relative;
             font-weight: 500;
             color: $blueColor;
+
+            transition: color .4s ease-in-out;
     
-            &:before {
+            &::before {
                 content: "• "; 
                 color: $blueColor;
+
+                transition: color .4s ease-in-out;
+            }
+
+            &::after {
+                content: " ";
+                position: absolute;
+                top: 1px;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-bottom: 2px solid $secondColor;
+
+                transform: translateX(-105%);
+                transition: transform .4s ease-in-out;
             }
     
             &:hover {
-             border-bottom: 1px solid $greyColor;
-             font-weight: 500;
-             cursor: pointer;
-             color: $greyColor;
-    
-             transition: .3s ease-in;
-    
+                cursor: pointer;
+                color: $secondColor;
+
                 &::before {
-                    content: "> ";
-                    color: $greyColor;
-                    font-weight: 500;
+                    color: $secondColor;
                 }
+
+                &::after {
+                    transform: translateX(0);
+                }
+
             }
         }
     }
@@ -737,12 +748,11 @@ body {
             margin: 0 auto;
             cursor: pointer;
             
-            background: $blueColor;
-            transition: background .3s ease-in;
+            background-color: $blueColor;
+            transition: background-color .3s ease-in-out;
     
             &:hover {
                 background-color: $secondColor;
-                transition: background .3s ease-in;
             }
         }
     
@@ -751,14 +761,14 @@ body {
             color: $mainWhite;
         }
     }
-}
+} //end of footer
 
 
 //Breakpoints
 @import "520px"; //simple icon
 @import "600px"; //navigation 
-@import "710px"; //container__item, code, footer
-@import "890px"; //pricing__box, simple
+@import "710px"; //container__item, start, simple, code, footer
+@import "890px"; //simple, code, pricing
 
 @media (min-width: 1000px) {
     .simple {
