--- a/scss/main.scss
+++ b/scss/main.scss
@@ -121,6 +121,10 @@ button, input {
     -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+    scroll-behavior: smooth;
+}
+
 body {
     padding:0;
     margin: 0;
@@ -177,7 +181,7 @@ body {
         @include listStyleReset();
         padding: 25px;
         margin: 10px;
-        overflow: hidden; // for before transition
+
     
         &:first-child {
             margin-top: 25px;
@@ -189,14 +193,13 @@ body {
         font-size: 25px;
         text-transform: uppercase;
         position: relative;
-
-        transition: font-weight .3s ease-in-out;
+        transition: font-weight .4s ease-in-out;
 
         &::before {
             content: " ";
             position: absolute;
             top: 0;
-            left: -200%;  //because overflow: hidden is &__item
+            left: -200%;
             width: 100%;
             height: 100%;
             border-bottom: 2px solid $mainWhite;
@@ -204,10 +207,10 @@ body {
             transition: transform .4s ease-in-out;
         }
 
-        &:hover {
+        &:hover, &--active {
             margin: 0;
             padding: 0;
-            font-weight: 800;
+            font-weight: 600;
             
             &::before {
                 transform: translateX(200%);
@@ -501,7 +504,7 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     min-height: 100vh;
-    background-color: #182e47;
+    background: #182e47 url("/assets/img/pattern.png") repeat left top;
     color: $secondColor;
     margin: 0 auto;
     padding: 4% 6% 80px;
