--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?51429989');
-  src: url('../font/fontello.eot?51429989#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?51429989') format('woff2'),
-       url('../font/fontello.woff?51429989') format('woff'),
-       url('../font/fontello.ttf?51429989') format('truetype'),
-       url('../font/fontello.svg?51429989#fontello') format('svg');
+  src: url('../font/fontello.eot?83175893');
+  src: url('../font/fontello.eot?83175893#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?83175893') format('woff2'),
+       url('../font/fontello.woff?83175893') format('woff'),
+       url('../font/fontello.ttf?83175893') format('truetype'),
+       url('../font/fontello.svg?83175893#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51429989#fontello') format('svg');
+    src: url('../font/fontello.svg?83175893#fontello') format('svg');
   }
 }
 */
@@ -59,6 +59,8 @@
 .icon-pencil:before { content: '\e801'; } /* '' */
 .icon-rwd:before { content: '\e802'; } /* '' */
 .icon-landingpage:before { content: '\e803'; } /* '' */
+.icon-ok:before { content: '\e804'; } /* '' */
+.icon-cancel:before { content: '\e805'; } /* '' */
 .icon-mobile:before { content: '\f034'; } /* '' */
 .icon-github:before { content: '\f056'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
