--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@ $greyColor: #666666;
 $blackColor: #1f1f1f;
 $secondColor: #222f3f;
 $orangeColor: #fc593b;
+$pricingBoxColor: #182e47;
 $fontFamily: 'Karla', sans-serif;
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700;800&display=swap');
@@ -98,7 +99,7 @@ $fontFamily: 'Karla', sans-serif;
     }
 }
 
-//typography setting & global setting
+//global setting
 h1 {
     font-size: 35px;
     font-weight: 800;
@@ -504,7 +505,7 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     min-height: 100vh;
-    background: #182e47 url("/assets/img/pattern.png") repeat left top;
+    background-color: $pricingBoxColor;
     color: $secondColor;
     margin: 0 auto;
     padding: 4% 6% 80px;
@@ -586,20 +587,22 @@ body {
             color: $greyColor;
         }
 
-        &__list {
+        .list {
             @include listStyleReset();
             line-height: 250%;
             font-size: 17px;
             margin: 20px 0;
-        }
 
-        &__item {
-            @include listStyleReset();
+            &__item {
+                @include listStyleReset();
+                color: $secondColor;
+            }
         }
 
         &__button {
             @include button($blueColor);
         }
+
 
         //active box 
         &__box--active {
@@ -614,8 +617,17 @@ body {
                 }
                 &__button {
                     @include button($orangeColor);
-                    
                     align-self: left;
+                }
+            }
+            .list {
+                &__item {
+                    color: $orangeColor;
+
+                    &--inactive {
+                        text-decoration: line-through;
+                        color: $pricingBoxColor+(90%);
+                    }
                 }
             }
         }
@@ -769,65 +781,12 @@ body {
 
 //Breakpoints
 @import "520px"; //simple icon
-@import "600px"; //navigation 
+@import "680px"; //navigation 
 @import "710px"; //container__item, start, simple, code, footer
 @import "890px"; //simple, code, pricing
+@import "1000px"; //simple
+@import "1200px"; //start, simple, code, footer
+@import "1500px"; //container__item, simple
+@import "1700px"; //container__item
 
-@media (min-width: 1000px) {
-    .simple {
-        &__phone {
-            font-size: 410px;
-        }
-    }
-}
-
-
-@media (min-width: 1200px) {
-    
-    .start {
-        @include boxAnotherGrid();
-
-        .box {
-            margin: 60px 0 0 0;
-        }
-    }
-
-    .simple {
-        grid-template-columns: 30% 60%;
-
-        &__phone {
-            font-size: 450px;
-        }
-    }
-
-    .code {
-        @include boxAnotherGrid();
-    }
-
-    .footer {
-        grid-template-columns: 40% 20% 20%;
-        padding: 3% 12%;
-    }
-}
-
-@media (min-width: 1500px) {
-    .container__item {
-        padding: 20px 14%;
-    }
-
-    .simple {
-        .header {
-            &__subtitle,
-            &__description {
-                margin: 40px 0;
-            }
-        }
-    }
-}
-
-@media (min-width: 1700px) {
-    .container__item {
-        padding: 20px 18%;
-    }
-}
 
